# proman-github

./: .bumpversion.cfg  README.md  mkdocs.yml  proman-lock.json  pyproject.toml
example/: package_manager.py  proman-lock.json  pyproject.toml
github/: __init__.py  archive.py  cli.py  config.py  filesystem.py  manifest.py  package_manager.py
proman_github/: __init__.py  __main__.py  archive.py  cli.py  config.py  dependency.py  filesystem.py  package_manager.py
src/proman_github/: __init__.py  __main__.py  archive.py  cli.py  config.py  dependency.py  package_manager.py
tasks/: __init__.py  build.py  doc.py  qa.py
tests/: test_version.py
