[tool.poetry]
name = "proman-github"
version = "0.1.1-dev2"
description = "GitHub based package manager."
authors = ["Jesse P. Johnson <jpj6652@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
PyGithub = "^1.55"
python-magic = "^0.4.24"
argufy = "^0.1.2-alpha.1"
proman-common = {version = "^0.1.1-alpha.1", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
pydocstyle = "^5.0.2"
docstr-coverage = "^1.2.0"
pytest-cov = "^2.10.0"
isort = "^5.9.2"
bandit = "^1.6.2"
safety = "^1.9.0"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.0"
mkdocstrings = "^0.15.2"
bump2version = "^1.0.0"
invoke = "^1.4.1"
flit = "^3.1.0"
mypy = "^0.910"
pyfakefs = "^4.5.0"
black = "^21.7b0"

[tool.poetry.scripts]
github = "proman_github:__main__.main"
gh = "proman_github:__main__.main"

[tool.flit.metadata]
module = "proman_github"
author = "Jesse P. Johnson"
author-email = "jpj6652@gmail.com"
home-page = "https://github.com/python-proman/proman-github"
requires = []

classifiers = ["License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"]

[tool.flit.scripts]
github = "proman_github:__main__.main"
gh = "proman_github:__main__.main"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-lenght = 79
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vagrant
    | _build
    | dist
  )
)
'''

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:invoke.*:",
    "ignore::DeprecationWarning:_yaml.*:",
]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
